# Machine-Teaching-for-XAI--TimeSeries-Models

./: .gitattributes  .gitignore  README.md  config.yaml  example.env  linux_requirements.txt  project_config.py  pyproject.toml
Data/: README.md  etron55-charging-sessions-public-processed.parquet  etron55-charging-sessions-public.parquet
Models/: LSTM_model_1.pth  LSTM_model_2.pth  LSTM_model_3.pth  LSTM_model_6.pth  LSTM_multihorizon_raytuned_model_1.pth  LSTM_multihorizon_raytuned_model_3.pth  LSTM_varseq_model_1.pth  LSTM_varseq_model_2.pth  LSTM_varseq_multistep_model_1.pth  LSTM_varseq_multistep_model_2.pth  TCN_multihorizon_raytuned_model_1.pth  TCN_multihorizon_raytuned_model_2.pth  TCN_multihorizon_raytuned_model_4.pth  Training log.txt  Training time log.txt  evaluation.txt
Notebooks/: # %% [markdown].py  00__Data_Anonymisation.ipynb  01__Data_Wrangling_&_FE.ipynb  01__Data_Wrangling_&_FE_v1.ipynb  01__Data_Wrangling_&_FE_v2.ipynb  01__Data_Wrangling_&_FE_v2.md  01__Data_Wrangling_&_FE_v2.py  01__Data_Wrangling_and_FE.ipynb  01__Data_Wrangling_and_FE.md  02__EDA.ipynb  02__EDA.md  02__EDA_v1.ipynb  02__EDA_v1.md  02__EDA_v1.py  03__Modelling.ipynb  03__Modelling.md  03__Modelling_v1.ipynb  03__Modelling_v10.ipynb  03__Modelling_v10.md  03__Modelling_v10.py  03__Modelling_v2.ipynb  03__Modelling_v3.ipynb  03__Modelling_v4.ipynb  03__Modelling_v5.ipynb  03__Modelling_v6.ipynb  03__Modelling_v7.ipynb  03__Modelling_v8.ipynb  03__Modelling_v9.ipynb  04__Anomaly Detection_v1.ipynb  04__Anomaly_Detection.ipynb  04__Anomaly_Detection.md  04__Anomaly_Detection_v3.py  (+22 more)
(+32 files in other folders)
