[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mt4xai"
version = "1.0.0"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mt4xai", "mt4xai.*", "mllm_experiment", "mllm_experiment.*"]

[project.scripts]
mllm-run-trial = "mllm_experiment.run_trial:main"
exp-build-teaching-sets = "mllm_experiment.build_teaching_sets:main"
exp-build-exam-sets = "mllm_experiment.build_exam_sets:main"
